# MagicalDelving

./: .gitignore  LICENSE  README.md  pyproject.toml
src/magicaldelving/: cli.py  moxfield.py  scryfall.py
src/magicaldelving/mulligan_sim/: __init__.py  audit_dump.py  card_db.py  card_facts.py  combat.py  deck_parser.py  defaults.py  index.py  mana.py  models.py  mulligan.py  runner.py  sim_core.py  state_mutators.py  tokens.py  tool.py  transform.py  win.py
src/magicaldelving/mulligan_sim/engine/: continuous.py  state_mutators.py
src/magicaldelving/mulligan_sim/phases/: beginning.py  combat.py  end.py  main.py
src/magicaldelving/mulligan_sim/rules/: crew.py  eligibility.py  keywords.py  land_drops.py  tokens.py  types.py
src/magicaldelving/topdeck_meta/: tool.py
tools/: topdeck_meta.py
